# PlonkScript

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  package.json  tsconfig.json
.github/workflows/: build-docs.yml  build-ui.yml  build-wasm.yml  deploy-all.yml  deploy-ui.yml
docs/: .gitignore  package.json
docs/content/: index.md
docs/content/.vitepress/: config.ts
docs/content/.vitepress/language/: plonkscript.tmLanguage.json  plonkscript.tmLanguage.yml
docs/content/analyzer/: halo2.md  plonky2.md
docs/content/example/: fibonacci.md  mimc.md  poseidon.md
docs/content/guide/: architecture.md  example.md  introduction.md  playground.md  started.md
docs/content/language/: constraints.md  controlflow.md  datatype.md  syntax.md
halo2_range_check/: Cargo.toml
halo2_range_check/src/: fibonacci.plonk  main.rs  proof_of_user.plonk  simple_example.plonk  table.rs
halo2_summarizer/: Cargo.toml
halo2_summarizer/src/: lib.rs
lib_test/: Cargo.toml
lib_test/src/: lib.rs
plonk_by_hand/: Cargo.toml
plonk_by_hand/src/: main.rs
rhai_script/: Cargo.toml  fibonacci.plonk  fibonacci.rhai
rhai_script/src/: circuit.rs  engine.rs  main.rs  system.rs  transpiler.rs
src/: lib.rs  main.rs  test_local.rs
struct_test/: Cargo.toml
struct_test/src/: main.rs
transpiler/: Cargo.toml  fibonacci.plonk  hello_world.rhai  mimc5-feistel.plonk  mimc5.plonk  poseidon.plonk
transpiler/src/: circuit.rs  engine.rs  lib.rs  main.rs  system.rs  transpiler.rs  util.rs
transpiler/src/engine/: bind.rs  custom_type.rs  gate.rs  io.rs  mod.rs  operator.rs
transpiler/src/system/: cell_expression.rs
ui/: README.md  index.html  jest.config.js  package.json  quasar.config.js
ui/public/icons/: site.webmanifest
ui/src/assets/: fib4.json  merkle_path_poseidon.json  output.json  range_check2.json
ui/src/components/: ArrayChips.vue  ArrayPropertyChips.vue  ConstraintsVisualization.vue  DigestChip.vue  Plonky2Visualization.vue  PropertyChips.vue
ui/src/layouts/: MainLayout.vue
ui/src/pages/: AnalyzerPage.vue  EditorPage.vue  IndexPage.vue  Plonky2AnalyzerPage.vue
ui/src/router/: routes.ts
ui/src/services/: ConstraintSystem.ts  DefaultModels.ts  GateLanguage.ts  LongestCommonPrefix.test.ts  LongestCommonPrefix.ts  MockProverTranslator.ts  PlonkScriptLanguage.ts  PropertyHelper.ts
ui/src/services/plonky2/: DefaultModels.ts  WitnessVisualization.ts
vscode-ext/: package.json
vscode-ext/syntaxes/: README.md  plonkscript.tmLanguage.json
wasm_binding/: Cargo.toml
wasm_binding/src/: lib.rs
wasm_test/: Cargo.toml  index.html  index.js  rust-toolchain
wasm_test/src/: lib.rs
web_gcd/: Cargo.toml
web_gcd/src/: main.rs
