[package]
name = "halo2_range_check"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2_proofs = { path = "../vendor/halo2/halo2_proofs" }
debug_parser = "0.1.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
