[package]
name = "halo2_summarizer"
version = "0.1.0"
edition = "2021"
description = "A summarizer for Halo2's MockProver output"
license = "MIT"
documentation = "Cargo.toml"
homepage = "https://plonk.pro"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "*"