[package]
name = "plonk_by_hand"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
"arithmetic" = []

[dependencies]
gf256 = "*"
elliptic-curve = "*"
rand_core = "0.6.4"
ff = { version = "0.13", features = ["derive"] }
