[package]
name = "transpiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2_proofs = { path = "../vendor/halo2/halo2_proofs" }
rhai = { version = "1.15.0", features = ["internals"] }
regex = "*"
once_cell = "*"
halo2_summarizer = { path = "../halo2_summarizer" }
hex = "0.4.3"