[package]
name = "wasm_test"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# halo2_proofs = { path = "../vendor/halo2/halo2_proofs" }

halo2_proofs = { version = "0.3.0", features = ["dev-graph"] }
rhai = { version = "1.15.0", features = ["internals"] }
regex = "*"
once_cell = "*"
wasm-bindgen = "0.2.84"
getrandom = { version = "0.2", features = ["js"] }


# extend = "1.2.0"
# halo2_proofs = { version = "0.3.0", features = ["dev-graph"] }
# plotters = "0.3.4"
# rand_core = "0.6.4"
# serde = { version = "1.0.156", features = ["derive"] }
# serde_json = "1.0.94"
# getrandom = { version = "0.2", features = ["js"] }
# wasm-bindgen = "0.2.84"
# js-sys = "0.3.61"