[package]
name = "wasm_test"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
rhai_script = { path = "../rhai_script" }
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
parking_lot = { version = "0.11", features = ["wasm-bindgen"]} # fix Uncaught TypeError: Failed to resolve module specifier "env". Relative references must start with either "/", "./", or "../".